// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics / Component / With Pipes Simple 1`] = `
<storybook-wrapper>
  <storybook-with-pipe
    ng-reflect-field="foobar"
  >
    <h1>
      CustomPipe: foobar
    </h1>
  </storybook-with-pipe>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With Pipes With args 1`] = `
<storybook-wrapper>
  <storybook-with-pipe
    ng-reflect-field="Foo Bar"
  >
    <h1>
      CustomPipe: Foo Bar
    </h1>
  </storybook-with-pipe>
</storybook-wrapper>
`;
